--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -318,23 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nkatigbak/miniconda3/lib/python3.5/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -359,7 +355,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Input\n",
     "Implement the `get_inputs()` function to create TF Placeholders for the Neural Network.  It should create the following placeholders:\n",
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -393,8 +392,8 @@
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
-    "    input = tf.placeholder(dtype=tf.int32, shape=(None, len(int_to_vocab)), name='input')\n",
-    "    targets = tf.placeholder(dtype=tf.int32, shape=(None, len(int_to_vocab)), name='targets')\n",
+    "    input = tf.placeholder(dtype=tf.int32, shape=(None, None), name='input')\n",
+    "    targets = tf.placeholder(dtype=tf.int32, shape=(None, None), name='targets')\n",
     "    learning_rate = tf.placeholder(dtype=tf.float32, name='learning_rate')\n",
     "    return (input, targets, learning_rate)\n",
     "\n",
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -448,7 +447,7 @@
     "    \"\"\"\n",
     "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * 1)\n",
-    "    state = tf.identity(lstm.zero_state(batch_size, dtype=tf.float32), name=\"initial_state\")\n",
+    "    state = tf.identity(cell.zero_state(batch_size, dtype=tf.float32), name=\"initial_state\")\n",
     "    return (cell, state)\n",
     "\n",
     "\n",
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -495,7 +494,7 @@
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
-    "    embeddings = tf.Variable(tf.random_uniform([vocab_size, embed_dim], -1, 1))\n",
+    "    embeddings = tf.Variable(tf.random_uniform([vocab_size, embed_dim], -1, 1, dtype=tf.float32))\n",
     "    embedment = tf.nn.embedding_lookup(embeddings, input_data)\n",
     "    return embedment\n",
     "\n",
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -546,7 +545,7 @@
     "    :param inputs: Input text data\n",
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
-    "    outputs,final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
     "    final_state = tf.identity(final_state, name=\"final_state\")\n",
     "    return (outputs,final_state)\n",
     "\n",
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -603,7 +602,7 @@
     "    \"\"\"\n",
     "    embedment = get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs, final_state = build_rnn(cell, embedment)\n",
-    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size)\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
     "    \n",
     "    return (logits, final_state)\n",
     "\n",
@@ -652,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -728,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -737,17 +736,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 300\n",
+    "num_epochs = 100\n",
     "# Batch Size\n",
-    "batch_size = 300\n",
+    "batch_size = 500\n",
     "# RNN Size\n",
-    "rnn_size = 256\n",
+    "rnn_size = 512\n",
     "# Embedding Dimension Size\n",
     "embed_dim = 256\n",
     "# Sequence Length\n",
-    "seq_length = 5\n",
+    "seq_length = 16\n",
     "# Learning Rate\n",
-    "learning_rate = .01\n",
+    "learning_rate = .001\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 50\n",
     "\n",
@@ -770,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -822,13 +821,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/8   train_loss = 8.824\n",
+      "Epoch   6 Batch    2/8   train_loss = 5.703\n",
+      "Epoch  12 Batch    4/8   train_loss = 5.205\n",
+      "Epoch  18 Batch    6/8   train_loss = 4.784\n",
+      "Epoch  25 Batch    0/8   train_loss = 4.396\n",
+      "Epoch  31 Batch    2/8   train_loss = 4.140\n",
+      "Epoch  37 Batch    4/8   train_loss = 3.908\n",
+      "Epoch  43 Batch    6/8   train_loss = 3.640\n",
+      "Epoch  50 Batch    0/8   train_loss = 3.390\n",
+      "Epoch  56 Batch    2/8   train_loss = 3.208\n",
+      "Epoch  62 Batch    4/8   train_loss = 3.041\n",
+      "Epoch  68 Batch    6/8   train_loss = 2.843\n",
+      "Epoch  75 Batch    0/8   train_loss = 2.652\n",
+      "Epoch  81 Batch    2/8   train_loss = 2.537\n",
+      "Epoch  87 Batch    4/8   train_loss = 2.387\n",
+      "Epoch  93 Batch    6/8   train_loss = 2.210\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -1103,6 +1126,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
