--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -736,7 +736,7 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 100\n",
+    "num_epochs = 200\n",
     "# Batch Size\n",
     "batch_size = 500\n",
     "# RNN Size\n",
@@ -744,7 +744,7 @@
     "# Embedding Dimension Size\n",
     "embed_dim = 256\n",
     "# Sequence Length\n",
-    "seq_length = 16\n",
+    "seq_length = 12\n",
     "# Learning Rate\n",
     "learning_rate = .001\n",
     "# Show stats for every n number of batches\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -832,22 +832,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/8   train_loss = 8.824\n",
-      "Epoch   6 Batch    2/8   train_loss = 5.703\n",
-      "Epoch  12 Batch    4/8   train_loss = 5.205\n",
-      "Epoch  18 Batch    6/8   train_loss = 4.784\n",
-      "Epoch  25 Batch    0/8   train_loss = 4.396\n",
-      "Epoch  31 Batch    2/8   train_loss = 4.140\n",
-      "Epoch  37 Batch    4/8   train_loss = 3.908\n",
-      "Epoch  43 Batch    6/8   train_loss = 3.640\n",
-      "Epoch  50 Batch    0/8   train_loss = 3.390\n",
-      "Epoch  56 Batch    2/8   train_loss = 3.208\n",
-      "Epoch  62 Batch    4/8   train_loss = 3.041\n",
-      "Epoch  68 Batch    6/8   train_loss = 2.843\n",
-      "Epoch  75 Batch    0/8   train_loss = 2.652\n",
-      "Epoch  81 Batch    2/8   train_loss = 2.537\n",
-      "Epoch  87 Batch    4/8   train_loss = 2.387\n",
-      "Epoch  93 Batch    6/8   train_loss = 2.210\n",
+      "Epoch   0 Batch    0/11   train_loss = 8.820\n",
+      "Epoch   4 Batch    6/11   train_loss = 5.793\n",
+      "Epoch   9 Batch    1/11   train_loss = 5.218\n",
+      "Epoch  13 Batch    7/11   train_loss = 4.916\n",
+      "Epoch  18 Batch    2/11   train_loss = 4.431\n",
+      "Epoch  22 Batch    8/11   train_loss = 4.273\n",
+      "Epoch  27 Batch    3/11   train_loss = 4.011\n",
+      "Epoch  31 Batch    9/11   train_loss = 3.770\n",
+      "Epoch  36 Batch    4/11   train_loss = 3.519\n",
+      "Epoch  40 Batch   10/11   train_loss = 3.340\n",
+      "Epoch  45 Batch    5/11   train_loss = 3.155\n",
+      "Epoch  50 Batch    0/11   train_loss = 2.990\n",
+      "Epoch  54 Batch    6/11   train_loss = 2.853\n",
+      "Epoch  59 Batch    1/11   train_loss = 2.625\n",
+      "Epoch  63 Batch    7/11   train_loss = 2.554\n",
+      "Epoch  68 Batch    2/11   train_loss = 2.399\n",
+      "Epoch  72 Batch    8/11   train_loss = 2.256\n",
+      "Epoch  77 Batch    3/11   train_loss = 2.128\n",
+      "Epoch  81 Batch    9/11   train_loss = 2.004\n",
+      "Epoch  86 Batch    4/11   train_loss = 1.919\n",
+      "Epoch  90 Batch   10/11   train_loss = 1.843\n",
+      "Epoch  95 Batch    5/11   train_loss = 1.727\n",
+      "Epoch 100 Batch    0/11   train_loss = 1.586\n",
+      "Epoch 104 Batch    6/11   train_loss = 1.500\n",
+      "Epoch 109 Batch    1/11   train_loss = 1.420\n",
+      "Epoch 113 Batch    7/11   train_loss = 1.368\n",
+      "Epoch 118 Batch    2/11   train_loss = 1.288\n",
+      "Epoch 122 Batch    8/11   train_loss = 1.148\n",
+      "Epoch 127 Batch    3/11   train_loss = 1.126\n",
+      "Epoch 131 Batch    9/11   train_loss = 1.054\n",
+      "Epoch 136 Batch    4/11   train_loss = 1.002\n",
+      "Epoch 140 Batch   10/11   train_loss = 0.904\n",
+      "Epoch 145 Batch    5/11   train_loss = 0.899\n",
+      "Epoch 150 Batch    0/11   train_loss = 0.822\n",
+      "Epoch 154 Batch    6/11   train_loss = 0.781\n",
+      "Epoch 159 Batch    1/11   train_loss = 0.751\n",
+      "Epoch 163 Batch    7/11   train_loss = 0.713\n",
+      "Epoch 168 Batch    2/11   train_loss = 0.670\n",
+      "Epoch 172 Batch    8/11   train_loss = 0.599\n",
+      "Epoch 177 Batch    3/11   train_loss = 0.587\n",
+      "Epoch 181 Batch    9/11   train_loss = 0.554\n",
+      "Epoch 186 Batch    4/11   train_loss = 0.566\n",
+      "Epoch 190 Batch   10/11   train_loss = 0.507\n",
+      "Epoch 195 Batch    5/11   train_loss = 0.482\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -899,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -926,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -966,13 +994,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -980,8 +1016,12 @@
     "    :param loaded_graph: TensorFlow graph loaded from file\n",
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    inputs = loaded_graph.as_graph_element(\"input:0\")\n",
+    "    istate = loaded_graph.as_graph_element(\"initial_state:0\")\n",
+    "    fstate = loaded_graph.as_graph_element(\"final_state:0\")\n",
+    "    probs = loaded_graph.as_graph_element(\"probs:0\")\n",
+    "    \n",
+    "    return (inputs, istate, fstate, probs)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1003,13 +1043,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1018,8 +1066,13 @@
     "    :param int_to_vocab: Dictionary of word ids as the keys and words as the values\n",
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    MAX=0\n",
+    "    MAXP=-1\n",
+    "    for i in range(len(probabilities)):\n",
+    "        p = probabilities[i]\n",
+    "        if p > MAX:\n",
+    "            MAXP = i\n",
+    "    return int_to_vocab[MAXP]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1041,17 +1094,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "homer_simpson: wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds wounds\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
-    "prime_word = 'moe_szyslak'\n",
+    "prime_word = 'homer_simpson'\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
